--- a/public/index.html
+++ b/public/index.html
@@ -2,183 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>OmsUrl — Free Smart URL Shortener with Analytics</title>
-    <meta name="description" content="OmsUrl — free smart URL shortener. Shorten links, track clicks and analytics, manage campaigns, and use pro features for free." />
-    <meta name="robots" content="index, follow" />
-    
-    <!-- Meta keywords -->
-    <meta name="keywords" content="URL redirection service, 301 URL shortener, Link cloaking, UTM parameters shortener, Self-hosted URL shortener, Open source URL shortener, API URL shortening, Bitly alternative, TinyURL alternative, Free Bitly alternative, Rebrandly vs Bitly, Best free URL shortener, URL shortener no ads, Privacy-focused URL shortener, Instagram link in bio tool, TikTok link shortener, YouTube description link shortener, Email marketing link shortener, SMS link shortener, QR code with link tracking, Podcast link shortener, Affiliate link shortener, Digital business card links, Event link shortener, Best URL shortener, Top link shorteners 2026, URL shortener with custom domain, Free branded link shortener, URL shortener for business, Shorten URLs for Instagram, Shorten links for TikTok, Short URLs for Twitter/X, URL shortener for YouTube, Shopify link shortener, Bitly, TinyURL, Short.io, Rebrandly, BL.INK, Ow.ly, Cutt.ly, is.gd, T2M, Polr, Yourls, ClickMeter, Lites.press, Sniply, Kutt.it, Shorby, PicSee, Buffer for links, Password-protected short links, Expiring short links, UTM builder, Bulk URL shortening, API for URL shortening, Link retargeting, Geo-targeted links, A/B testing for links, Mobile deep linking, Social media link shortener, Free custom URL shortener, Branded URL shortener, Shorten long URL, URL management tool, Click tracking, URL analytics, Link management, Create short link, QR code generator, Bio link tool, Shorten URL, URL shortener free, Short link, Link shortener, Free link shortener, Custom URL shortener, Shorten links, URL shrinker, Link compressor" />
-
-    <!-- Canonical -->
-    <link rel="canonical" href="https://omsurl.com/" />
-
-    <!-- Apple touch icons (explicit sizes) -->
-    <!-- Place corresponding files in the public/ folder or update the hrefs -->
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon-180x180.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/apple-touch-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="76x76"  href="%PUBLIC_URL%/apple-touch-icon-76x76.png" />
-    <!-- fallback -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-    <!-- Safari pinned tab (optional, recommended for macOS Safari) -->
-    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#667eea" />
-
-    <!-- Windows tile -->
-    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/ms-icon-144x144.png" />
-    <meta name="msapplication-TileColor" content="#000000" />
-
-    <!-- Open Graph -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="OmsUrl — Free Smart URL Shortener with Analytics" />
-    <meta property="og:description" content="Shorten links, track clicks and campaigns, and access advanced analytics — free from OmsUrl." />
-    <meta property="og:url" content="https://omsurl.com/" />
-    <meta property="og:site_name" content="Omsurl" />
-    <meta property="og:image" content="https://omsurl.com/og-image.png" />
-
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="OmsUrl — Free Smart URL Shortener with Analytics" />
-    <meta name="twitter:description" content="Shorten links, track clicks and campaigns, and access advanced analytics — free from OmsUrl." />
-    <meta name="twitter:image" content="https://omsurl.com/og-image.png" />
-
-    <!-- Manifest / favicon -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    
-    <!-- CSS -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created by OmsUrl"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-    <!-- Structured data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@graph": [
-        {
-          "@type": "WebSite",
-          "@id": "https://omsurl.com/#website",
-          "url": "https://omsurl.com/",
-          "name": "OmsUrl",
-          "description": "OmsUrl — free and powerful URL shortener. Create short links, QR codes, track clicks and manage links easily.",
-          "publisher": {
-            "@type": "Organization",
-            "name": "Omslabs"
-          },
-          "potentialAction": {
-            "@type": "SearchAction",
-            "target": "https://omsurl.com/search?q={search_term_string}",
-            "query-input": "required name=search_term_string"
-          }
-        },
-        {
-          "@type": "SoftwareApplication",
-          "name": "OmsUrl",
-          "url": "https://omsurl.com/",
-          "description": "Free smart URL shortener with analytics and campaigns.",
-          "applicationCategory": "Utilities",
-          "operatingSystem": "Web"
-        }
-      ]
-    }
-    </script>
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>OmsUrl</title>
   </head>
-
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-    <!-- Expose tags to the SPA for tag pages -->
-    <script>
-      window.__SITE_TAGS__ = [
-        "URL redirection service",
-        "301 URL shortener",
-        "Link cloaking",
-        "UTM parameters shortener",
-        "Self-hosted URL shortener",
-        "Open source URL shortener",
-        "API URL shortening",
-        "Bitly alternative",
-        "TinyURL alternative",
-        "Free Bitly alternative",
-        "Rebrandly vs Bitly",
-        "Best free URL shortener",
-        "URL shortener no ads",
-        "Privacy-focused URL shortener",
-        "Instagram link in bio tool",
-        "TikTok link shortener",
-        "YouTube description link shortener",
-        "Email marketing link shortener",
-        "SMS link shortener",
-        "QR code with link tracking",
-        "Podcast link shortener",
-        "Affiliate link shortener",
-        "Digital business card links",
-        "Event link shortener",
-        "Best URL shortener",
-        "Top link shorteners 2026",
-        "URL shortener with custom domain",
-        "Free branded link shortener",
-        "URL shortener for business",
-        "Shorten URLs for Instagram",
-        "Shorten links for TikTok",
-        "Short URLs for Twitter/X",
-        "URL shortener for YouTube",
-        "Shopify link shortener",
-        "Bitly",
-        "TinyURL",
-        "Short.io",
-        "Rebrandly",
-        "BL.INK",
-        "Ow.ly (Hootsuite)",
-        "Cutt.ly",
-        "is.gd",
-        "T2M (Tiny.cc)",
-        "Polr",
-        "Yourls (self-hosted)",
-        "ClickMeter",
-        "Lites.press",
-        "Sniply (now part of Rewind)",
-        "Kutt.it",
-        "Shorby",
-        "PicSee (for visual links)",
-        "Buffer for links",
-        "Password-protected short links",
-        "Expiring short links",
-        "UTM builder for URLs",
-        "Bulk URL shortening",
-        "API for URL shortening",
-        "Link retargeting",
-        "Geo-targeted links",
-        "A/B testing for links",
-        "Mobile deep linking",
-        "Social media link shortener",
-        "Free custom URL shortener",
-        "Branded URL shortener",
-        "Shorten long URL",
-        "URL management tool",
-        "Click tracking",
-        "URL analytics",
-        "Link management",
-        "Short URL with analytics",
-        "Create short link",
-        "QR code generator from URL",
-        "Bio link tool",
-        "Shorten URL",
-        "URL shortener free",
-        "Short link",
-        "Link shortener",
-        "Free link shortener",
-        "URL shortening service",
-        "Custom URL shortener",
-        "Shorten links",
-        "URL shrinker",
-        "Link compressor"
-      ];
-    </script>
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
 
-    <!-- If you use CRA, the build scripts will be injected automatically -->
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
   </body>
 </html>
